# parsimonious

./: .gitignore  .travis.yml  README.rst  example_json.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  make.bat  ref.rst
parsimonious/: __init__.py  exceptions.py  expressions.py  grammar.py  nodes.py  utils.py
parsimonious/examples/: grammar_syntax_extension.py  string_expression_language.py  string_expression_language_test.py
parsimonious/tests/: benchmarks.py  test_benchmarks.py  test_example_json.py  test_examples.py  test_expressions.py  test_grammar.py  test_nodes.py  test_use_regex_library.py
