[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "parsimonious"
version = "0.10.0"
authors = [{name = "Erik Rose", email = "erikrose@grinchcentral.com"}]
license = {text = "MIT"}
description = "(Soon to be) the fastest pure-Python PEG parser I could muster"
keywords = [
    "parse",
    "parser",
    "parsing",
    "peg",
    "packrat",
    "grammar",
    "language",
]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: General",
]
urls = {Homepage = "https://github.com/erikrose/parsimonious"}
dependencies = ["regex>=2022.3.15"]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
